# quiz

./: .gitignore  Procfile  docker-compose.yml  manage.py  package.json  pyproject.toml  requirements.txt  tsconfig.json  vue.config.js
application/config/: settings.py  urls.py  wsgi.py
application/modules/questions/: admin.py
application/modules/questions/migrations/: 0001_initial.py  0002_answers_questions.py  0003_answers_img_url.py  0004_useranswer.py
application/modules/questions/models/: __init__.py  answers.py  questions.py  terms.py  user_answer.py
application/schema/: answers.py  questions.py  schema.py  terms.py  user_answer.py
config/: settings.py  views.py
docker/app/: Dockerfile  entrypoint.dev.sh
docker/frontend/: entrypoint.dev.sh
src/: index.html  router.ts  vue-apollo.js
src/views/: Home.vue  Quiz.vue  Setting.vue  Terms.vue
src/views/quiz/: Index.vue  InputName.vue  Show.vue
src/views/terms/: Index.vue  New.vue  Show.vue
