[tool.poetry]
name = "quiz"
version = "0.1.0"
description = ""
authors = ["nasum <tomato.wonder.life@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
flake8 = "^3.7"
psycopg2-binary = "^2.8"
graphene-django = "^2.2"
rope = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
